--- a/score_0.2/sports/basketball/style.css
+++ b/score_0.2/sports/basketball/style.css
@@ -141,7 +141,30 @@
     background-color: #444444; /* 이미지 배경색을 어둡게 변경 */
 }
 
+.game-row-wrap .team-info .homespan {
+    background-color: rgba(32, 32, 197, 0.7);
+    width: 40px;
+    text-align: center;
+    border-radius: 10px;
+    color: #fff;
+    position: absolute;
+    bottom: 10%;
+    font-size: 8px;
+}
+
+.game-row-wrap .team-info .awayspan {
+    background-color: #d8491e;
+    width: 40px;
+    text-align: center;
+    border-radius: 10px;
+    color: #fff;
+    position: absolute;
+    bottom: 10%;
+    font-size: 8px;
+}
+
 .game-row-wrap .team-info .tr .td{
+    position: relative;
     flex:0.4; 
     display: flex; 
     justify-content: center; 
@@ -158,7 +181,7 @@
 }
 
 .game-row-wrap .game-row .team-info .tr.th .td{
-    font-size: 1em;
+    font-size: 0.7em;
 }
 
 .game-row-wrap .game-row .team-info .tr.th,
@@ -177,7 +200,7 @@
     justify-content: center; 
     align-items: center;
     font-weight: bold;
-    font-size: 0.7em;
+    font-size: 0.5em;
     background-color: #2b2c34; /* 기존의 #F1F1F1 대신 어두운 색상으로 변경 */
     text-align: center;
     border: 1px solid #555555; /* 테두리 추가 */
@@ -185,7 +208,7 @@
 
 
 .game-row-wrap .team-info .tr.th.odds {
-    font-size: 0.7em;
+    font-size: 0.65em;
 }
 
 .game-row-wrap .score .tr .td{
