--- a/score_0.2/sports/volleyball/style.css
+++ b/score_0.2/sports/volleyball/style.css
@@ -141,7 +141,31 @@
     background-color: #444444; /* 이미지 배경색을 어둡게 변경 */
 }
 
+.game-row-wrap .team-info .homespan {
+    background-color: rgba(32, 32, 197, 0.7);
+    width: 40px;
+    text-align: center;
+    border-radius: 10px;
+    color: #fff;
+    position: absolute;
+    bottom: 10%;
+    font-size: 8px;
+}
+
+.game-row-wrap .team-info .awayspan {
+    background-color: #d8491e;
+    width: 40px;
+    text-align: center;
+    border-radius: 10px;
+    color: #fff;
+    position: absolute;
+    bottom: 10%;
+    font-size: 8px;
+}
+
+
 .game-row-wrap .team-info .tr .td{
+    position: relative;
     flex:0.4; 
     display: flex; 
     justify-content: center; 
@@ -158,7 +182,7 @@
 }
 
 .game-row-wrap .game-row .team-info .tr.th .td{
-    font-size: 1em;
+    font-size: 0.7em;
 }
 
 .game-row-wrap .game-row .team-info .tr.th,
